@@ -96,6 +96,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       Fixes Bugzilla 174.
   b - Added a check for a NULL job pointer in modify_job. This fixes TRQ-818
   b - fix problem with '+ and segfault when using multiple node gpu requests.
+  b - Fixed a problem with cpusets where if a boot cpuset is present under /dev/cpuset
+      torque would only write out 1024 cpus. This was changed from a hardcoded
+      value to be the maximum size found in /dev/cpuset/cpus. TRQ-840
       (backported from 4.0.1)
 
 3.0.4
